# TT-Metal-Mini-Template

./: CMakeLists.txt  README.md  example.cpp  log.txt
cmake/: CPM.cmake
dependencies/: CMakeLists.txt
kernels/compute/: add_2_tiles.cpp
kernels/dataflow/: reader_binary_1_tile.cpp  writer_1_tile.cpp
